--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,10 @@
     cursor-pointer hover:scale-125
     transition-all duration-150 ease-out
   }
+
+  .btn {
+    @apply h-7
+    cursor-pointer hover:scale-125
+    transition-all duration-150 ease-out
+  }
 }
